--- a/politics.css
+++ b/politics.css
@@ -5,3 +5,99 @@
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
 }
+
+.section-heading{
+    position: relative;
+    display: block;
+}
+
+.left, .right{
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    height: 0.2px;
+    background: rgba(0, 0 ,0, 0.1);
+    width: 40%;
+}
+
+.right{
+    right: 30px;
+    left: auto;
+}
+
+.left{
+    left: 30px
+}
+
+h2 {
+    overflow: hidden;
+    text-align: center;
+    margin: 20px;
+    text-transform: uppercase;
+}
+/* h2:before,
+h2:after {
+    background-color: #000;
+    content: "";
+    display: inline-block;
+    height: 1px;
+    position: relative;
+    vertical-align: middle;
+    width: 50%;
+}
+h2:before {
+    right: 1.2em;
+    margin-left: -50%;
+}
+h2:after {
+    left: 1.2em;
+    margin-right: -50%;
+} */
+
+.main-news{
+    display: flex;
+    justify-content: space-between;
+}
+
+a {
+    text-decoration: none;
+    color: #000;
+}
+
+.first-card{
+    width: 25%;
+}
+
+.first-card img{
+    width: 100%;
+}
+
+.second-card{
+    width: 45%;
+   border-right: 1px solid black;
+   
+}
+.second-card img{
+    width: 100%;
+    height: 300px;
+}
+
+.second-card a{
+    font-size: 24px;
+    /* text-align: center; */
+    display: block;
+}
+
+.second-card p{
+    font-size: 30px;
+    text-align: center;
+}
+.third-card{
+    width: 25%;
+}
+
+.third-card a{
+    display: block;
+    font-weight: 700;
+    margin-bottom: 20px;
+}
