--- a/tidelabNews.css
+++ b/tidelabNews.css
@@ -34,8 +34,8 @@
     padding: 10px;
     box-shadow: 0 4px 8px 0 rgba(0 0 0 0.2);
     transition: 0.3s;
-    border-radius: 5px; */
-}
+    border-radius: 5px; 
+}*/
 
 .section{
     padding: 40px;
