--- a/css/sports.css
+++ b/css/sports.css
@@ -148,9 +148,9 @@ a{
 }
 
 img{
-    width: 220px;
+    width: 300px;
     height: 160px;
-}
+} 
 
 
 /* page number */
@@ -168,4 +168,92 @@ img{
 
 #pupa{
     background-color: #e61414;
+}
+
+    /* FOR SCREEN SIZES  */
+/* EXTRA SMALL DEVICES LIKE SMARTPHONES */
+@media only screen and (max-width: 479px){
+    main{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-top: 20px;
+    }
+    .sports-wrapper{
+        width: 100%;
+    }
+    .main-news{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        /* gap: 10px; */
+        /* border-bottom: 1px solid rgb(226, 217, 217); */
+    }
+    .right-section, .left-section, .middle-section{
+        width: 100%;
+    }
+    .middle-section{
+        border: none;
+    }
+    .middle-title {
+        font-size: 16px;
+        text-align: center;
+    }
+    .news-wrapper{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        margin-top: 10px;
+    }
+    .second-news-container{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-top: 10px;
+        gap: 10px;
+    }
+    .section-news-content-container{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-top: 10px;
+        gap: 10px;
+    }
+    .second-news-container{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-top: 10px;
+        gap: 10px;
+    }
+    .news-content-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-top: 10px;
+        gap: 10px;
+    }
+    .section-second-news-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-top: 10px;
+        gap: 10px;
+    }
+    .section-1{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+    }
 }
