--- a/homepage.css
+++ b/homepage.css
@@ -7,6 +7,7 @@
 }
 
 
+
 /*
 *{
     margin:0;
@@ -41,7 +42,7 @@ a {
 
 .section-heading-separator .heading-title{
     font-size:1.2em;
-    font-family:'Poppins', sans-serif;
+    font-family:'Times New Roman', Times, serif;
     line-height: 1.2;
     color: black;
     background-color: white;
@@ -62,15 +63,36 @@ a {
     border-bottom: none;
     margin-top: 2%;
 }
+/*this section affects the overall width of the main-news-contect-section on the row layout*/
 
 .row {
-    max-width: none;
-    margin-right: -.9375rem;
-    margin-left: -.9375rem;
+    max-width:100%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+   /* border:2px solid tomato; */
 }
+
+/* this media query aligns all items in a column layout, however the div class must have a pre class name="row"
+    while the .column affects the column layout in the row section which is the left-news-content, the middle-news-content and 
+    the right-news-content, to take a width of 100% 
+*/
+@media (max-width: 720px) {
+    .row {
+      flex-direction: column;
+      text-align: center;
+      width:100%;
+    }
+    .column .group-news-content-middle-main{
+      width: 100%;
+     
+    }
+
+    /*this line of code affects the last child of the list items to not have a bottom border*/
+    .list-outline .list-item:last-child {
+        margin-bottom:10.5%;
+    }
+  }
 
 /*STYLING THE NEWS CONTENT SECTION STARTING FROM THE LEFT*/
 .column {
@@ -84,13 +106,13 @@ a {
 
 .list-outline{
     padding-left: 1.25em;
-    border-left: 2px solid rgb(134, 121, 121);
+    border-left: 2px solid rgb(209, 188, 188);
 }
 
 .list-outline .list-item{
     margin-bottom: .25em;
     padding-bottom: .5em;
-    border-bottom: 2px solid rgb(134, 121, 121);
+    border-bottom: 2px solid rgb(209, 188, 188);
 }
 
 .list-outline .list-item:last-child {
@@ -140,7 +162,7 @@ article{
     top:0;
     left: -1.875em;
     height: .75em;
-    width: .75em;background: red;
+    width: .75em;background: green;
     display: block;
     border-radius: 50%;
     content:'';
@@ -207,6 +229,7 @@ a {
 
 
 .group-news-media-content-left .group-news-content-middle-main {
+    margin-bottom:10.5%;
     flex-grow: 0;
     flex-shrink: 0;
     flex-basis: 40%;
@@ -227,6 +250,10 @@ a {
 }
 
 
+.video-content-title {
+    text-align:center;
+}
+
 .video-content-container {
     display:flex;
     justify-content: center;
@@ -237,7 +264,6 @@ a {
     max-height:fit-content;
     
 }
-
 
 
 .video-content-card {
@@ -251,3 +277,31 @@ a {
     width:100%;
     height:100%;
 }
+
+
+@media (max-width: 720px) {
+    .row {
+      flex-direction: column;
+      text-align: center;
+    }
+    .column .group-news-content-middle-main{
+      width: 100%;
+    }
+  }
+
+  /*this is the styling for navigating to other videos using the more videos button*/
+  .more-videos-button {
+      display:flex;
+      flex-wrap: wrap;
+      justify-content: flex-end;
+  }
+
+  .more-videos-button .more-videos-text {
+      font-size: 1.5em;
+      font-weight:bold;
+      color:rgb(10, 83, 26);
+      font-family: 'poppins' sans-serif;
+  }
+
+  /*the next section is the metro and business section*/
+
