--- a/css/homepage.css
+++ b/css/homepage.css
@@ -300,3 +300,306 @@ footer hr {
       text-align: center;
     }
 }
+
+
+/*this my own styling section for the home page layout*/
+
+/*
+*{
+    margin:0;
+    padding:0;
+}
+*/
+/*
+body {
+    margin:0;
+    padding:0;
+}
+*/
+
+/*
+img {
+    max-width:100%;
+    border:0;
+}
+
+*/
+
+a {
+  color:black;
+}
+
+.section-heading-separator {
+  display:flex;
+  justify-content:center;
+  position:relative;
+  margin-bottom: 1em;
+}
+
+.section-heading-separator .heading-title{
+  font-size:1.2em;
+  font-family:'Times New Roman', Times, serif;
+  line-height: 1.2;
+  color: black;
+  background-color: white;
+  position: relative;
+  z-index: 1;
+  padding: 0.25em 1em;
+}
+
+.heading-title a {
+  text-decoration: none;
+  color:black;
+}
+.section-heading-separator fieldset {
+  width:100%;
+  text-align: center;
+  border-left: none;
+  border-right: none;
+  border-bottom: none;
+  margin-top: 2%;
+}
+/*this section affects the overall width of the main-news-contect-section on the row layout*/
+
+.row {
+  max-width:100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+ /* border:2px solid tomato; */
+}
+
+/* this media query aligns all items in a column layout, however the div class must have a pre class name="row"
+  while the .column affects the column layout in the row section which is the left-news-content, the middle-news-content and 
+  the right-news-content, to take a width of 100% 
+*/
+@media (max-width: 720px) {
+  .row {
+    flex-direction: column;
+    text-align: center;
+    width:100%;
+  }
+  .column .group-news-content-middle-main{
+    width: 100%;
+   
+  }
+
+  /*this line of code affects the last child of the list items to not have a bottom border*/
+  .list-outline .list-item:last-child {
+      margin-bottom:10.5%;
+  }
+}
+
+/*STYLING THE NEWS CONTENT SECTION STARTING FROM THE LEFT*/
+.column {
+  padding-right: .9375rem;
+  padding-left: .9375rem;
+  flex-grow: 1;
+  flex-shrink: 1;
+  flex-basis: 0px;
+  min-width: initial;
+}
+
+.list-outline{
+  padding-left: 1.25em;
+  border-left: 2px solid rgb(209, 188, 188);
+}
+
+.list-outline .list-item{
+  margin-bottom: .25em;
+  padding-bottom: .5em;
+  border-bottom: 2px solid rgb(209, 188, 188);
+}
+
+.list-outline .list-item:last-child {
+  border-bottom: none;
+}
+
+
+ol, ul {
+  list-style-type: none;
+  margin:0;
+  padding:0;
+}
+
+article{
+  display: block;
+}
+
+.item-content {
+  margin-bottom: 0px;
+}
+
+.item-content .before-entry-time {
+  margin-bottom: 0.25em;
+  font-style:italic;
+  font-family: 'Times New Roman', Times, serif;
+}
+
+.list-outline .item-content .before-entry-time {
+  position: relative;
+}
+
+.before-entry-time {
+  display: flex;
+  flex-wrap: wrap;
+  font-weight: 500;
+  font-size: 0.825em;
+  color:rgb(90, 80, 80);
+}
+
+::before, ::after {
+  box-sizing: inherit;
+}
+
+
+.list-outline .item-content .before-entry-time ::before{
+  position:absolute;
+  top:0;
+  left: -1.875em;
+  height: .75em;
+  width: .75em;background: green;
+  display: block;
+  border-radius: 50%;
+  content:'';
+}
+
+.entry-time {
+  margin-bottom: 0.25em;
+  display: flex;
+  align-items: center;
+}
+
+.news-item-content {
+  line-height: 1.2;
+  font-weight: 500;
+}
+
+.group-news-media-content-left .list-outline .item-content .news-item-content {
+  font-size:1.0875em;
+}
+
+.news-item-content a{
+  color: black;
+}
+
+a {
+  text-decoration: none;
+  background-color: transparent;
+}
+
+
+/**STYLING THE NEWS CONTENT SECTION STARTING FROM THE LEFT - NOW THE MIDDLE (CENTER) SECTION*/
+
+
+.middle-news-content .middle-news-content-image-display {
+  display:block;
+  margin-bottom:0.5em;
+}
+
+.middle-news-content-image-display {
+  position:relative;
+  padding-bottom: 56.25%;
+
+}
+
+
+.middle-news-content-image-display img {
+  display:block;
+  position: absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  object-fit:cover;
+}
+
+
+.group-news-media-content-left .middle-news-content .middle-news-content-headline {
+  line-height:1.2;
+  text-align: center;
+  font-weight: normal;
+  margin-top: 0.865em;
+  font-size:1.55em;
+}
+
+
+.group-news-media-content-left .group-news-content-middle-main {
+  margin-bottom:10.5%;
+  flex-grow: 0;
+  flex-shrink: 0;
+  flex-basis: 40%;
+}
+
+/**STYLING THE NEWS CONTENT SECTION STARTING FROM THE LEFT - NOW THE RIGHT HAND SECTION 
+(WITH A FLIP IN THE POSITION AND FONT STYLING OF THE div class="entry-time" and the h3 class="news-item-content")*/
+
+
+
+
+/*TRENDING VIDEOS CONTENT SECTION STYLING*/
+
+.video-content-section {
+  border-top: 2px solid rgb(134, 121, 121);
+  margin-top: 0.865em;
+  margin-top: 2%;
+}
+
+
+.video-content-title {
+  text-align:center;
+}
+
+.video-content-container {
+  display:flex;
+  justify-content: center;
+  gap:2%;
+ /* border:2px solid black; */
+  align-items: center;
+  max-width:fit-content;
+  max-height:fit-content;
+  
+}
+
+
+.video-content-card {
+  padding:10px;
+  flex-basis:10%;
+  flex-grow: 1;
+  flex-shrink:0;
+}
+
+.video-content-card a img {
+  width:100%;
+  height:100%;
+}
+
+
+@media (max-width: 720px) {
+  .row {
+    flex-direction: column;
+    text-align: center;
+  }
+  .column .group-news-content-middle-main{
+    width: 100%;
+  }
+}
+
+/*this is the styling for navigating to other videos using the more videos button*/
+.more-videos-button {
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+}
+
+.more-videos-button .more-videos-text {
+    font-size: 1.5em;
+    font-weight:bold;
+    color:rgb(10, 83, 26);
+    font-family: 'poppins' sans-serif;
+}
+
+/*the next section is the metro and business section*/
+
+
+
