--- a/css/sports.css
+++ b/css/sports.css
@@ -185,17 +185,12 @@ main{
     width: 200px;
 }
 
-a{
+.content-container a{
     text-decoration: none;
     color: #000;
     font-weight: normal;
     font-size: 15px;
 }
-
-img{
-    width: 300px;
-    height: 160px;
-} 
 
 
 /* page number */
@@ -511,14 +506,7 @@ footer hr {
         margin-top: 10px;
         gap: 10px;
     }
-    .second-news-container{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        margin-top: 10px;
-        gap: 10px;
-    }
+    
     .news-content-container {
         display: flex;
         flex-direction: column;
