--- a/css/metro.css
+++ b/css/metro.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Fugaz+One&family=Monoton&display=swap');
 *{
-    margin: 0;
+    margin-right: 6px;
+    margin-left: 3px;
     padding: 0;
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
@@ -54,23 +55,227 @@ nav {
     padding: 0.6rem 0.6rem 0.5rem 0.6rem;
 }
 
-/* //FOOTER// */
-footer {
-    background-color: #2bb7da;
-    margin-top: 2rem;
-    padding-top: 1rem;
-}
-.container {
-    width: 95%;
-    max-width: 1100px;
-    margin: 0 auto;
-}
 /* //MAIN SECTION// */
 /* Add CSS for main section here */
 
+main{
+  display: flex;
+  justify-content: space-between;
+  margin-top: 50px;
+ 
+}
+.whole-section{
+  width: 80%;
+}
+
+a{
+  text-decoration: none;
+  color: #000;
+}       
+.head{
+  width: 90%;
+  text-align: center;
+  font-size: 25px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+.head h2{
+  border-bottom: 1px solid rgb(224, 213, 213);
+  line-height: 0.1em;
+  margin: 10px 20px;
+ 
+}
+.head h2 span{
+  background: #fff;
+  padding: 0 30px;
+}
+
+/*first section*/
+
+
+.first-section{
+ display: flex;
+/* justify-content: space-between; */
+ padding-bottom: 70px;
+}
+
+/*.sub-first-section{
+  padding-right: 25px;
+  border-right: 1px solid rgb(224, 213, 213);
+}*/
+.sub-first-section{
+  width: 25%;
+}
+#section-a{
+  padding-bottom: 20px;
+}
+#section-b{
+  padding-top: 10px;
+}
+.sub-second-section{
+  width: 45%;   
+  padding-left: 25px;
+  border-left: 1px solid rgb(224, 213, 213);
+  padding-right: 25px;
+  border-right: 1px solid rgb(224, 213, 213);
+  
+}
+.sub-third-section{
+  width: 30%;
+  text-align: start;
+
+}
+
+.span3-name{
+  font-style: italic;
+}
+.span3-name span{
+  padding-left: 30px;
+}
+.span3-all{
+padding-bottom: 30px;
+padding-top: 10px;
+}
+.span3-div4{
+  padding-bottom: 10px;
+  font-weight: bold;
+  text-align: center;
+  
+}
+
+
+/*second section*/
+
+.sub-sec-div img{
+  height: 200px;
+  width: 250px;
+}
+.section-wrapper-content{
+display: flex;
+justify-content: space-between;
+gap: 10px;
+padding-top: 30px;
+padding-bottom: 30px;
+}
+.section2-wrapper-content{
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+  padding-bottom: 200px;
+}
+
+/*third section*/
+
+
+
+.title-wrapper img{
+  height: 200px;
+  width: 250px;
+}
+.third-section-wrapper-content{
+display: flex;
+justify-content: space-between;
+gap: 10px;
+padding-top: 30px;
+padding-bottom: 30px;
+}
+.third-section2-wrapper-content{
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+  padding-bottom: 200px;
+}
+
+
+/* fourth section
+code for the third section
+
+*/
+
+
+
+/*button section*/
+
+
+#red{
+  background-color: rgb(204, 19, 19);
+  padding: 10px;
+  height: 45px;
+  margin: 2px;
+  border: 0;
+  border-radius: 5px;
+  font-size: 17px;
+}
+#red :hover{
+  background-color: rgb(204, 19, 19);
+  padding: 10px;
+  height: 45px;
+  margin: 2px;
+  border: 0;
+  border-radius: 5px;
+  font-size: 17px;
+}
+#red a{
+  padding: 15px;
+  height: 45px;  
+}
+
+.btn{
+  background-color: rgb(241, 237, 237);
+  padding: 10px;
+  height: 45px;
+  margin: 2px;
+  border: 0;
+  border-radius: 5px;
+  font-size: 17px;
+}
+
+.btn :hover{
+  background-color: rgb(98, 122, 143);
+  padding: 15px;
+  height: 45px;
+  margin: 2px;
+  border: 0;
+  border-radius: 5px;
+  font-size: 17px;
+}
+.btn a{
+  padding: 15px;
+  height: 45px;   
+}
+.advert{
+  width: 20%;
+  
+  margin-right: 10px;
+  margin-left: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+.advert-div p{
+margin-bottom: 100px;
+}
+.advert-div p img{
+  width: 150px;
+  height: 400px;
+}
+
+
 
 
 /* //FOOTER// */
+
+footer {
+  background-color: #2bb7da;
+  margin-top: 2rem;
+  padding-top: 1rem;
+}
+.container {
+  width: 95%;
+  max-width: 1100px;
+  margin: 0 auto;
+}
 .footer-top {
     display: flex;
     justify-content: space-between;
