--- a/css/sports.css
+++ b/css/sports.css
@@ -94,8 +94,20 @@ main{
 }
 .advertisment{
     width: 20%;
-    background-color: red;
+   /* background-color:#2bb7da; */
 }
+
+.ad{
+    width: 100%;
+    height: 550px;
+    margin-bottom: 80px;
+  }
+  
+  .adname{
+   font-size: 10px;
+   text-align: center;
+  }
+
 .main-news{
     display: flex;
     justify-content: space-around;
@@ -215,17 +227,12 @@ main{
     width: 200px;
 }
 
-a{
+.content-container a{
     text-decoration: none;
     color: #000;
     font-weight: normal;
     font-size: 15px;
 }
-
-img{
-    width: 220px;
-    height: 160px;
-} 
 
 
 /* page number */
