--- a/css/politics.css
+++ b/css/politics.css
@@ -1,501 +1,504 @@
-@import url('https://fonts.googleapis.com/css2?family=Fugaz+One&family=Monoton&display=swap');
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
+@import url("https://fonts.googleapis.com/css2?family=Fugaz+One&family=Monoton&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 /* //HEADER SECTION// */
 header {
-    background: #2bb7da;
+  background: #2bb7da;
 }
 nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-.header-logo h3, .footer-logo h3 {
-    color: white;
+.header-logo h3,
+.footer-logo h3 {
+  color: white;
 }
 .header-logo h3 {
-    margin-left: 1rem;
+  margin-left: 1rem;
 }
 .nav-toggle {
-    display: none;
+  display: none;
 }
 .nav-checkbox {
-    display: none;
+  display: none;
 }
 .nav-menu {
-    display: flex;
-    list-style: none;
+  display: flex;
+  list-style: none;
 }
 .nav-menu li:not(:last-child) {
-    margin-right: 1.5rem;
+  margin-right: 1.5rem;
 }
 .nav-menu li a,
 .nav-call-to-action a {
-    text-decoration: none;
-    color: white;
+  text-decoration: none;
+  color: white;
 }
 .nav-call-to-action {
-    margin-right: 2rem;
+  margin-right: 2rem;
 }
 .nav-call-to-action a {
-    border: 2px solid white;
-    border-radius: 5px;
+  border: 2px solid white;
+  border-radius: 5px;
 }
 .nav-call-to-action a:first-child {
-    padding: 0.5rem 0.5rem;
-    margin-right: 0.2rem;
+  padding: 0.5rem 0.5rem;
+  margin-right: 0.2rem;
 }
 .nav-call-to-action a:last-child {
-    padding: 0.6rem 0.6rem 0.5rem 0.6rem;
+  padding: 0.6rem 0.6rem 0.5rem 0.6rem;
 }
 
 /* //MAIN SECTION// */
-.section-heading{
-    position: relative;
-    display: block;
+.section-heading {
+  position: relative;
+  display: block;
 }
 
-.left, .right{
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    height: 0.2px;
-    background: rgba(0, 0 ,0, 0.1);
-    width: 40%;
+.left,
+.right {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  height: 0.2px;
+  background: rgba(0, 0, 0, 0.1);
+  width: 40%;
 }
 
-.right{
-    right: 30px;
-    left: auto;
+.right {
+  right: 30px;
+  left: auto;
 }
 
-.left{
-    left: 30px
+.left {
+  left: 30px;
 }
 
 h2 {
-    overflow: hidden;
-    text-align: center;
-    margin: 20px;
-    text-transform: uppercase;
+  overflow: hidden;
+  text-align: center;
+  margin: 20px;
+  text-transform: uppercase;
 }
-/* h2:before,
-h2:after {
-    background-color: #000;
-    content: "";
-    display: inline-block;
-    height: 1px;
-    position: relative;
-    vertical-align: middle;
-    width: 50%;
-}
-h2:before {
-    right: 1.2em;
-    margin-left: -50%;
-}
-h2:after {
-    left: 1.2em;
-    margin-right: -50%;
-} */
 
-.main-news{
-    display: flex;
-    justify-content: space-between;
-    width: 80%;
-    margin: 0 auto;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-    padding-bottom: 25px;
+.main-news {
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
+  margin: 0 auto;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  padding-bottom: 25px;
 }
 
 a {
-    text-decoration: none;
-    color: #000;
+  text-decoration: none;
+  color: #000;
 }
 
-.first-card{
-    width: 25%;
-   }
-
-.first-card img{
-    width: 100%;
+.first-card {
+  width: 25%;
 }
 
-.first-link-wrap{
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-    padding-bottom: 20px;
+.first-card img {
+  width: 100%;
 }
 
-.second-link-wrap{
-    padding: 20px 0;
+.first-link-wrap {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  padding-bottom: 20px;
 }
 
-.second-card{
-    width: 45%;
-   border-right: 1px solid rgba(0, 0, 0, 0.1);
-   border-left: 1px solid rgba(0, 0, 0, 0.1);
-}
-.second-card img{
-    width: 100%;
-    height: 300px;
+.second-link-wrap {
+  padding: 20px 0;
 }
 
-.second-card a{
-    font-size: 24px;
-    /* text-align: center; */
-    display: block;
-    padding:0 30px;
+.second-card {
+  width: 45%;
+  border-right: 1px solid rgba(0, 0, 0, 0.1);
+  border-left: 1px solid rgba(0, 0, 0, 0.1);
+}
+.second-card img {
+  width: 100%;
+  height: 300px;
 }
 
-.second-card p{
-    font-size: 30px;
-    text-align: center;
-}
-.third-card{
-    width: 25%;
-}
-
-.third-card a{
-    display: block;
-    font-weight: 700;
+.second-card a {
+  font-size: 24px;
+  /* text-align: center; */
+  display: block;
+  padding: 0 30px;
 }
 
-.links{
-    margin-bottom: 20px;
+.second-card p {
+  font-size: 30px;
+  text-align: center;
+}
+.third-card {
+  width: 25%;
 }
 
-.links h6{
-    margin-top: 8px;
-    font-weight: 200;
+.third-card a {
+  display: block;
+  font-weight: 700;
 }
 
-.section-2, .section-3{
-    width: 80%; 
-    margin: 40px auto;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-    padding-bottom: 150px;
+.links {
+  margin-bottom: 20px;
 }
 
-.section-4{
-    width: 80%; 
-    margin: 40px auto;
-    padding-bottom: 150px;
+.links h6 {
+  margin-top: 8px;
+  font-weight: 200;
 }
-.row-2 a, .row-3 a, .row-4 a{
-    display: block;
-    font-weight: 700;
-    margin-bottom: 20px;
-    width: 22%;
+
+.section-2,
+.section-3 {
+  width: 80%;
+  margin: 40px auto;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  padding-bottom: 150px;
 }
-.row-2, .row-3, .row-4{
-    width: 100%;  
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+
+.section-4 {
+  width: 80%;
+  margin: 40px auto;
+  padding-bottom: 150px;
 }
- .row-2 img, .row-3 img, .row-4 img{
-    width: 100%;
-    height: 150px;
- }
+.row-2 a,
+.row-3 a,
+.row-4 a {
+  display: block;
+  font-weight: 700;
+  margin-bottom: 20px;
+  width: 22%;
+}
+.row-2,
+.row-3,
+.row-4 {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.row-2 img,
+.row-3 img,
+.row-4 img {
+  width: 100%;
+  height: 150px;
+}
 
 .section-5 {
-    display:flex;
-    flex-wrap: wrap;
-    margin-left: 150px;
-    padding-bottom: 50px;
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: 150px;
+  padding-bottom: 50px;
 }
 
-
-
-.section-5 div{
-    width: 30px;
-    height: 40px;
-    display:flex;
-    flex-wrap: wrap;
-    justify-content: center; 
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    background: #f3f3f3; 
-    padding: 10px; 
-    margin: 3px;
-    border-radius: 3px;
-} 
-
-.section-5 .one-link{
-    background: red;
-    border-radius: 3px;
+.section-5 div:hover {
+  cursor: pointer;
+  background: #eed6b2;
 }
 
-.section-5 .six{
-    width: 50px;
-    height: 40px;
-    border-radius: 3px;
+.section-5 .peel {
+  width: 0;
+  height: 0;
+  background-color: white;
+  padding: 0;
+  margin: 8px;
 }
 
-.section-6{
-    width: 80%;
-    margin: 40px auto;
-    padding-bottom: 50px;
+.section-5 div {
+  width: 30px;
+  height: 40px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background: #f3f3f3;
+  padding: 10px;
+  margin: 3px;
+  border-radius: 3px;
 }
 
-.row-6{
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+.section-5 .one-link {
+  background: red;
+  border-radius: 3px;
 }
 
-.row-6 a{
-    display: block;
-    font-weight: 500;
-    margin-bottom: 20px;
-    width: 22%;
+.section-5 .six {
+  width: 50px;
+  height: 40px;
+  border-radius: 3px;
 }
-.r0w-6 img{
-    width: 100%;
-    height: 150px;
+
+.section-6 {
+  width: 80%;
+  margin: 40px auto;
+  padding-bottom: 50px;
+}
+
+.row-6 {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.row-6 a {
+  display: block;
+  font-weight: 500;
+  margin-bottom: 20px;
+  width: 22%;
+}
+.r0w-6 img {
+  width: 100%;
+  height: 150px;
 }
 /* //FOOTER// */
 footer {
-    background-color: #2bb7da;
-    margin-top: 2rem;
-    padding-top: 1rem;
+  background-color: #2bb7da;
+  margin-top: 2rem;
+  padding-top: 1rem;
 }
 .container {
-    width: 95%;
-    max-width: 1100px;
-    margin: 0 auto;
+  width: 95%;
+  max-width: 1100px;
+  margin: 0 auto;
 }
-  
+
 .footer-top {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 .footer-call-to-action a {
-    display: inline-block;
-    text-decoration: none;
-    background-color: white;
-    color: #2bb7da;
-    border: 2px solid white;
-    border-radius: 5px;
-    padding: 1rem 1.2rem 0.4rem 1.2rem;
+  display: inline-block;
+  text-decoration: none;
+  background-color: white;
+  color: #2bb7da;
+  border: 2px solid white;
+  border-radius: 5px;
+  padding: 1rem 1.2rem 0.4rem 1.2rem;
 }
 .footer-call-to-action {
-    display: flex;
-    margin-right: 2rem;
+  display: flex;
+  margin-right: 2rem;
 }
-  
+
 form .search-input {
-    padding: 1rem;
-    background: #2bb7da;
-    color: white;
-    border: 2px solid white;
-    border-left: none;
-    border-radius: 5px;
-    margin-left: -7px;
+  padding: 1rem;
+  background: #2bb7da;
+  color: white;
+  border: 2px solid white;
+  border-left: none;
+  border-radius: 5px;
+  margin-left: -7px;
 }
 ::placeholder {
-    color: white;
+  color: white;
 } /* Firefox */
-  form .search-input:focus {
-    outline: none;
+form .search-input:focus {
+  outline: none;
 }
-  :-ms-input-placeholder {
-    color: white;
+:-ms-input-placeholder {
+  color: white;
 } /* IE 10-11 */
-  
+
 .footer-middle-section {
-    margin-top: 2rem;
-    display: flex;
-    justify-content: space-between;
-    font-size: 1.2rem;
+  margin-top: 2rem;
+  display: flex;
+  justify-content: space-between;
+  font-size: 1.2rem;
 }
 .footer-section {
-    width: 20%;
-    display: flex;
-    flex-direction: column;
+  width: 20%;
+  display: flex;
+  flex-direction: column;
 }
 .footer-section:first-child {
-    margin-left: 1.8rem;
+  margin-left: 1.8rem;
 }
 .footer-section:last-child {
-    margin-right: 1.8rem;
+  margin-right: 1.8rem;
 }
 .footer-section a {
-    text-decoration: none;
-    color: white;
-    margin-bottom: 0.2rem;
+  text-decoration: none;
+  color: white;
+  margin-bottom: 0.2rem;
 }
 /* .footer-subscribe-btn-container {
     width: 20%;
 } */
 .footer-section .subscribe-btn {
-    display: inline-block;
-    text-decoration: none;
-    color: white;
-    border: 2px solid white;
-    font-weight: 600;
-    padding: 0.6rem 2.5rem;
-    border-radius: 5px;
-    margin-top: 0.6rem;
+  display: inline-block;
+  text-decoration: none;
+  color: white;
+  border: 2px solid white;
+  font-weight: 600;
+  padding: 0.6rem 2.5rem;
+  border-radius: 5px;
+  margin-top: 0.6rem;
 }
-  
+
 footer hr {
-    margin: 1rem 0;
+  margin: 1rem 0;
 }
 .footer-bottom-section {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 .footer-bottom-link a {
-    text-decoration: none;
-    color: white;
+  text-decoration: none;
+  color: white;
 }
 .footer-bottom-link a:not(:last-child) {
-    margin-right: 1.5rem;
+  margin-right: 1.5rem;
 }
 .footer-bottom-section p {
-    color: white;
-    margin-left: 1.8rem;
+  color: white;
+  margin-left: 1.8rem;
 }
 .footer-social-links {
-    margin-right: 2rem;
-    display: flex;
-    align-items: center;
+  margin-right: 2rem;
+  display: flex;
+  align-items: center;
 }
 .footer-social-links a {
-    text-decoration: none;
+  text-decoration: none;
 }
 .footer-social-links p {
-    margin-right: 0.5rem;
+  margin-right: 0.5rem;
 }
 .footer-social-links a:not(:last-child) {
-    margin-right: 0.9rem;
+  margin-right: 0.9rem;
 }
 .footer-social-links svg {
-    fill: white;
+  fill: white;
 }
-.mentor-name, .copyright {
-    text-align: center;
-    color: white;
-    margin-top: 1rem;
-    padding-bottom: 1rem;
-    text-transform: uppercase;
-    font-weight: 600;
+.mentor-name,
+.copyright {
+  text-align: center;
+  color: white;
+  margin-top: 1rem;
+  padding-bottom: 1rem;
+  text-transform: uppercase;
+  font-weight: 600;
 }
 @media (max-width: 750px) {
-    header {
-      position: relative;
-    }
-    .nav-toggle {
-      display: block;
-      position: absolute;
-      cursor: pointer;
-      margin-top: 0.4rem;
-      margin-right: 1rem;
-      right: 0;
-    }
-    nav svg {
-      width: 1.3rem;
-      fill: white;
-    }
-    .close,
-    .nav-checkbox {
-      display: none;
-    }
-  
-    .nav-menu {
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-      align-items: center;
-      margin: 0.1rem 0;
-    }
-    .nav-links {
-      position: absolute;
-      margin-top: 3.3rem;
-      /* left: 50%; */
-      top: 20px;
-      width: 100%;
-    }
-  
-    li {
-      display: none;
-      padding: 0.2rem 1rem 0.2rem;
-      font-size: 1.2rem;
-    }
-    .nav-checkbox:checked ~ .nav-links .nav-menu li {
-      display: block;
-    }
-    .nav-checkbox:checked ~ label.nav-toggle .close {
-      display: block;
-    }
-    .nav-checkbox:checked ~ label.nav-toggle .menu {
-      display: none;
-    }
-    .nav-checkbox:checked ~ .nav-links .nav-menu {
-      background-color: black;
-      opacity: 0.9;
-      height: 94vh;
-      padding-top: 2rem;
-      border-radius: 3px;
-    }
-    .nav-call-to-action {
-      display: none;
-    }
-    footer {
-      font-size: 1rem;
-    }
-    .footer-call-to-action a {
-      padding: 0.6rem 0.5rem 0.2rem 0.5rem;
-    }
-    form .search-input {
-      padding: 0.8rem;
-    }
-    .footer-top {
-      flex-direction: column;
-    }
-    .footer-middle-section {
-      flex-wrap: wrap;
-      font-size: 1rem;
-    }
-    .footer-section {
-      margin-left: 1rem;
-      width: 32%;
-    }
-    .footer-section:nth-child(3) {
-      margin-top: 0.5rem;
-    }
-    .footer-section:first-child {
-      margin-left: 1rem;
-    }
-    .footer-section:nth-child(2) {
-      margin-right: 1rem;
-    }
-    .footer-section:last-child {
-      margin-top: 0.5rem;
-      margin-right: 1rem;
-      margin-left: 2rem;
-    }
-    .footer-section .subscribe-btn {
-      padding: 0.4rem 3rem 0.4rem 3rem;
-    }
-    .footer-bottom-section {
-      flex-direction: column;
-      text-align: center;
-    }
-    .footer-bottom-section p {
-      margin-left: 0;
-    }
-    .footer-bottom-section p,
-    .footer-bottom-link {
-      width: 90%;
-    }
-    .mentor-name {
-      text-align: center;
-    }
+  header {
+    position: relative;
+  }
+  .nav-toggle {
+    display: block;
+    position: absolute;
+    cursor: pointer;
+    margin-top: 0.4rem;
+    margin-right: 1rem;
+    right: 0;
+  }
+  nav svg {
+    width: 1.3rem;
+    fill: white;
+  }
+  .close,
+  .nav-checkbox {
+    display: none;
+  }
+
+  .nav-menu {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
+    margin: 0.1rem 0;
+  }
+  .nav-links {
+    position: absolute;
+    margin-top: 3.3rem;
+    /* left: 50%; */
+    top: 20px;
+    width: 100%;
+  }
+
+  li {
+    display: none;
+    padding: 0.2rem 1rem 0.2rem;
+    font-size: 1.2rem;
+  }
+  .nav-checkbox:checked ~ .nav-links .nav-menu li {
+    display: block;
+  }
+  .nav-checkbox:checked ~ label.nav-toggle .close {
+    display: block;
+  }
+  .nav-checkbox:checked ~ label.nav-toggle .menu {
+    display: none;
+  }
+  .nav-checkbox:checked ~ .nav-links .nav-menu {
+    background-color: black;
+    opacity: 0.9;
+    height: 94vh;
+    padding-top: 2rem;
+    border-radius: 3px;
+  }
+  .nav-call-to-action {
+    display: none;
+  }
+  footer {
+    font-size: 1rem;
+  }
+  .footer-call-to-action a {
+    padding: 0.6rem 0.5rem 0.2rem 0.5rem;
+  }
+  form .search-input {
+    padding: 0.8rem;
+  }
+  .footer-top {
+    flex-direction: column;
+  }
+  .footer-middle-section {
+    flex-wrap: wrap;
+    font-size: 1rem;
+  }
+  .footer-section {
+    margin-left: 1rem;
+    width: 32%;
+  }
+  .footer-section:nth-child(3) {
+    margin-top: 0.5rem;
+  }
+  .footer-section:first-child {
+    margin-left: 1rem;
+  }
+  .footer-section:nth-child(2) {
+    margin-right: 1rem;
+  }
+  .footer-section:last-child {
+    margin-top: 0.5rem;
+    margin-right: 1rem;
+    margin-left: 2rem;
+  }
+  .footer-section .subscribe-btn {
+    padding: 0.4rem 3rem 0.4rem 3rem;
+  }
+  .footer-bottom-section {
+    flex-direction: column;
+    text-align: center;
+  }
+  .footer-bottom-section p {
+    margin-left: 0;
+  }
+  .footer-bottom-section p,
+  .footer-bottom-link {
+    width: 90%;
+  }
+  .mentor-name {
+    text-align: center;
+  }
 }
