--- a/css/sports.css
+++ b/css/sports.css
@@ -487,9 +487,91 @@ footer hr {
     }
 }
     /* FOR SCREEN SIZES  */
-@media only screen and (min-width: 1024px){
-
+/* @media only screen and (min-width: 1024px){ */
+    /* main{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        margin-top: 20px;
     }
+    .sports-wrapper{
+        width: 100%;
+    }
+    .main-news{
+        display: flex;
+        /* flex-direction: column; */
+        justify-content: center;
+        align-items: center;
+        /* gap: 10px; */
+        /* border-bottom: 1px solid rgb(226, 217, 217); */
+    /* }
+    .right-section, .left-section, .middle-section{
+        width: 100%;
+    }
+    .middle-section{
+        border: none;
+    }
+    .middle-title {
+        font-size: 16px;
+        text-align: center;
+    }
+    .news-wrapper{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        margin-top: 10px;
+    }
+    .second-news-container{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-top: 10px;
+        gap: 10px;
+    }
+    .section-news-content-container{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-top: 10px;
+        gap: 10px;
+    }
+    .second-news-container{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-top: 10px;
+        gap: 10px;
+    }
+    .news-content-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-top: 10px;
+        gap: 10px;
+    }
+    .section-second-news-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-top: 10px;
+        gap: 10px;
+    }
+    .section-1{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+    }
+    } */ 
 /* //MEDIUM DEVICES LIKE LANDSCAPE TABLETS */
 @media screen and (min-width:768px) and (max-width: 1023px){
 
