made some changes in the structure of sports page

--- a/css/sports.css
+++ b/css/sports.css
@@ -1,14 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Fugaz+One&family=Monoton&display=swap');
 *{
-    margin-right: 6px;
-    margin-left: 3px;
+    margin-right: 0;
+    margin-left: 0px;
     padding: 0;
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
 }
+a{
+    text-decoration: none;
+}
 /* Header Section */
 header {
+    height: 90px;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    overflow: hidden;
     background: #2bb7da;
+    z-index: 5;
 }
 nav {
     display: flex;
@@ -17,9 +26,13 @@ nav {
 }
 .header-logo h3, .footer-logo h3 {
     color: white;
+    font-size: 35px;
 }
 .header-logo h3 {
     margin-left: 1rem;
+}
+.nav-link{
+    font-size: 25px;
 }
 .nav-toggle {
     display: none;
@@ -62,13 +75,11 @@ nav {
 }
   
 .section-heading-separator .heading-title{
-    font-size:1.2em;
+    font-size: 2em;
     font-family:'Times New Roman', Times, serif;
     line-height: 1.2;
     color: black;
     background-color: white;
-    position: relative;
-    z-index: 1;
     padding: 0.25em 1em;
 }
   
@@ -82,18 +93,19 @@ nav {
     border-left: none;
     border-right: none;
     border-bottom: none;
-    margin-top: 2%;
+    margin-top: 6%;
 }
 main{
     display: flex;
     justify-content: space-between;
-    margin-top: 20px;
+    margin: 10px 20px 10px 20px;
 }
 .sports-wrapper{
     width: 80%;
 }
 .advertisment{
     width: 20%;
+    
    /* background-color:#2bb7da; */
 }
 
@@ -107,11 +119,15 @@ main{
    font-size: 10px;
    text-align: center;
   }
+  .advert-inside{
+      margin-left: 100px;
+      
+  }
 
 .main-news{
     display: flex;
     justify-content: space-around;
-    gap: 10px;
+    gap: 30px;
     border-bottom: 1px solid rgb(226, 217, 217);
 }
 .left-section{
@@ -126,8 +142,14 @@ main{
 }
 
 .left-card-image{
+    border-radius: 5px;
     width: 100%;
-    height: 170px;
+    height: 220px;
+}
+.left-card-image:hover{
+    box-shadow: 0 4px 8px 0 rgba(27, 27, 27, 0.9);
+    transition: 2s;
+    scale: 1.5;
 }
 .middle-section{
     width: 40%;
@@ -149,41 +171,75 @@ main{
     text-align: center;
 }
 .middle-card-image{
+    border-radius: 5px;
     width: 100%;
-    height: 250px;
+    height: 430px;
+}
+.middle-card-image{
+    box-shadow: 0 4px 8px 0 rgba(27, 27, 27, 0.9);
+    transition: 2s;
+    scale: 1.5;
 }
 
 .right-section{
     width: 30%;
 }
+
 .news-title a{
     font-weight: 700;
     text-decoration: none;
     color: #000;
 }
-.news-title  a p{
-    margin-top: -16px;
+ .news-title  a p{
+    margin-top: -5px;
+    font-size: 18px;
+    line-height: 1.5;
 }
+.news-title  a p:hover{
+background: whitesmoke;
+} 
 .new-news-content{
     display: flex;
-    justify-content: left;
+    margin-top: -30px;
+    gap: 20px;
     border-bottom: 1px solid rgb(226, 217, 217);
 }
 .news-author h5, .news-time h5{
-    margin-top: -20px;
     font-weight: 200;
+    font-size: 15px;
 }
-/* NEWS WRAPPER SECTION */
+/* MINOR SECTION */
 
-.news-wrapper{
+.minor-news-wrapper{
     display: flex;
-    justify-content: space-evenly;
-    gap: 20px;
+    gap: 40px;
     margin-top: 20px;
+    padding: 10px;
 }
 .news-image{
+    border-radius: 5px;
     width: 220px;
     height: 160px;
+}
+.news-image:hover{
+    box-shadow: 0 4px 8px 0 rgba(27, 27, 27, 0.9);
+    transition: 2s;
+    scale: 1.5;
+}
+.section-title, .content-wrapper{
+    border-radius: 5px;
+    width: 220px;
+    font-size: 20px;
+}
+.section-title h3 a, .content-wrapper h3 a{
+    font-size: 15px;
+    line-height: 1.5;
+}
+.section-title h3 a:hover{
+    background-color: whitesmoke;
+}
+.content-wrapper h3 a:hover{
+    background-color: whitesmoke;
 }
 .section-1 a{
     text-decoration: none;
@@ -200,17 +256,18 @@ main{
     opacity: 0.3;
 }
 
-.section-news-content-container{
+.section-news-content-container, .news-content-container{
  display: flex;
- margin-top: 50px;
- gap: 20px;
+ gap: 40px;
+ /* margin-top: 50px; */
+ padding: 10px;
 }
 
-.news-content-container{
+/* .news-content-container{
  display: flex;
  margin-top: 50px;
  gap: 20px;
-}
+} */
 .section-second-news-container{
  display: flex;
  margin-top: 30px;
@@ -233,6 +290,15 @@ main{
     font-weight: normal;
     font-size: 15px;
 }
+.modified-img{
+    width: 280px;
+    height: 190px;
+}
+.modified-part{
+    display: flex;
+    gap: 40px;
+    margin-top: 50px;
+}
 
 
 /* page number */
@@ -245,8 +311,15 @@ main{
     height: 40px;
     margin: 2px;
     margin-bottom: 40px;
-    border: 0;
+    border: none;
+    border-radius: 5px;
 }
+.btn:hover{
+    background-color: #e61414;
+    transition: 0.5s;
+    scale: 2.5;
+}
+
 
 #pupa{
     background-color: #e61414;
@@ -508,8 +581,8 @@ footer hr {
     .main-news{
         display: flex;
         /* flex-direction: column; */
-        justify-content: center;
-        align-items: center;
+        /* justify-content: center;
+        align-items: center; */
         /* gap: 10px; */
         /* border-bottom: 1px solid rgb(226, 217, 217); */
     /* }
@@ -673,6 +746,13 @@ footer hr {
         margin-top: 10px;
         gap: 10px;
     }
+    .minor-news-wrapper{
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        margin-top: 20px;
+        padding: 10px;
+    }
     .second-news-container{
         display: flex;
         flex-direction: column;
@@ -703,5 +783,13 @@ footer hr {
         justify-content: center;
         align-items: center;
         width: 100%;
+    }
+    .advert-inside{
+        width: 300px;
+        margin-left: 0;
+        
+    }
+    .advert{
+        display: none;
     }
 }
