I added media query for screen sizes between 468px and 767px

--- a/css/sportsContent.css
+++ b/css/sportsContent.css
@@ -1,4 +1,15 @@
 /* Header Section */
+@import url('https://fonts.googleapis.com/css2?family=Fugaz+One&family=Monoton&display=swap');
+*{
+    margin-right: 0;
+    margin-left: 0px;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
+}
+a{
+    text-decoration: none;
+}
 header {
     height: 90px;
     position: fixed;
