--- a/css/sports.css
+++ b/css/sports.css
@@ -811,121 +811,167 @@ align-items: center;
 
 /* //SMALL DEVICES LIKE POTRAIT TABLET,LARGE PHONE */
 @media screen and (min-width: 480px) and (max-width: 767px) {
-  main {
+  main{
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     margin-top: 20px;
-  }
-  .sports-wrapper {
-    width: 100%;
-  }
-  main-news {
+}
+.sports-wrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.main-news{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    /* gap: 10px; */
-    /* border-bottom: 1px solid rgb(226, 217, 217); */
-  }
-  .right-section,
-  .left-section,
-  .middle-section {
+}
+.right-section, .left-section, .middle-section{
     width: 100%;
-  }
-  .middle-section {
+    text-align: center;
+}
+.left-section{
+  padding-left: 10px;
+  padding-right: 10px;
+}
+.middle-section{
     border: none;
+    padding-left: 10px;
+}
+.middle-card-image{
+  width: 100%;
+  height: 300px;
+
+}
+.middle-title {
+    font-size: 16px;
+    text-align: center;
+}
+.news-wrapper{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    margin-top: 10px;
+}
+.second-news-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+    gap: 10px;
+}
+.section-news-content-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+    gap: 10px;
+}
+.minor-news-wrapper{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    margin-top: 20px;
+    padding: 10px;
+}
+.second-news-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+    gap: 10px;
+}
+.news-content-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+    gap: 10px;
+}
+  .section-second-news-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+  gap: 10px;
+  }
+  .section-1{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  }
+  /* .second-news-container {
+    display: flex;
+    /* flex-wrap: nowrap; */
+    flex-wrap: wrap;
+    /* flex-direction: column; */
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+    gap: 30px;
+} */
+  .modified-part{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  align-items: center;
+  width: 100%;
+  
+  }
+  
+.section-news-content-container, .news-content-container {
+    display: flex;
+    gap: 40px;
+    margin-top: 20px;
+    padding: 10px;
+}
+  .modified-img {
+  width: 220px;
+  height: 170px;
+  }
+  .horizontal{
+    display: none;
+  }
+  .advert-inside{
+      width: 300px;
+      margin-left: 0;
+      
+  }
+  .advertisment{
+      display: none;
+  }
+  .body-advert{
+    visibility: visible;
+  }
+  .body-advert{
+    display: contents;
+  }
+  .body-advert-image{
+    width: 220px;
+    height: 50px;
+  }
+  .adnammy {
+    padding-left: 0px;
   }
 }
 
 /* EXTRA SMALL DEVICES LIKE SMARTPHONES */
 
-/* @media only screen and (max-width: 479px) {
-  main {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    margin-top: 20px;
-  }
-  .sports-wrapper {
-    width: 100%;
-  }
-  .main-news {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center; 
-  }
-  .right-section,
-  .left-section,
-  .middle-section {
-    width: 100%;
-  }
-  .middle-section {
-    border: none;
-  }
-  .middle-title {
-    font-size: 16px;
-    text-align: center;
-  }
-  .news-wrapper {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    margin-top: 10px;
-  }
-  .second-news-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: 10px;
-    gap: 10px;
-  }
-  .section-news-content-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: 10px;
-    gap: 10px;
-  }
-  .second-news-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: 10px;
-    gap: 10px;
-  }
-  .news-content-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: 10px;
-    gap: 10px;
-  }
-  .section-second-news-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: 10px;
-    gap: 10px;
-  }
-  .section-1 {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-  }
-} */
 @media only screen and (max-width: 479px){
     main{
         display: flex;
