--- a/css/contact.css
+++ b/css/contact.css
@@ -1,7 +1,492 @@
-@import url('https://fonts.googleapis.com/css2?family=Fugaz+One&family=Monoton&display=swap');
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
+@import url("https://fonts.googleapis.com/css2?family=Fugaz+One&family=Monoton&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+
+/* //HEADER SECTION// */
+header {
+  background: linear-gradient(to right, #2bb7da, #31d35c);
+}
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1.2rem;
+}
+
+.header-logo h3,
+.footer-logo h3 {
+  color: white;
+  font-size: 1.3rem;
+}
+.header-logo h3 {
+  margin-left: 1rem;
+}
+.header-logo span,
+.footer-logo span {
+  color: lawngreen;
+  font-size: 1.4rem;
+}
+.nav-toggle {
+  display: none;
+}
+.nav-checkbox {
+  display: none;
+}
+.nav-menu {
+  display: flex;
+  list-style: none;
+}
+.nav-menu li:not(:last-child) {
+  margin-right: 1.5rem;
+}
+.nav-menu li a,
+.nav-call-to-action a {
+  text-decoration: none;
+  color: white;
+}
+/* hover styles for the nav-link */
+.nav-link {
+  position: relative;
+}
+.nav-link:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  display: block;
+  height: 5px;
+  background: black;
+  left: 0;
+  right: 0;
+  bottom: -1.4625rem;
+  opacity: 0;
+}
+.nav-link:hover {
+  color: black;
+}
+.nav-link:hover::before {
+  opacity: 0.75;
+}
+.nav-call-to-action {
+  margin-right: 2rem;
+}
+.nav-call-to-action a {
+  border: 2px solid white;
+  border-radius: 5px;
+}
+.nav-call-to-action a:first-child {
+  padding: 0.5rem 0.5rem;
+  margin-right: 0.2rem;
+}
+.nav-call-to-action a:last-child {
+  padding: 0.6rem 0.6rem 0.5rem 0.6rem;
+}
+.container {
+  width: 95%;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+/* Contact form styling */
+.contact {
+  background-color: #f3f4f6;
+  padding: 4rem 0;
+}
+.form-heading h2 {
+  text-align: center;
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+}
+.contact-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  box-shadow: 0px 3px 12px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 3px 12px rgba(0, 0, 0, 0.15);
+  width: 50%;
+  margin: 0 auto;
+}
+.contact-form-group {
+  width: 80%;
+}
+.contact-form-group input {
+  width: 100%;
+  height: 40px;
+  margin: 0.5rem 0;
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 8px;
+  font-size: 18px;
+}
+.contact-form-group input:focus,
+.contact-form-group textarea:focus {
+  outline: none;
+  border-color: #31d35c;
+}
+.contact-form-group label {
+  font-size: 1.2rem;
+}
+.contact-form-group textarea {
+  width: 100%;
+  display: block;
+  resize: none;
+  height: 17.75rem;
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 8px;
+  font-size: 18px;
+  margin-top: 0.5rem;
+}
+.contact-form-group a {
+  display: inline-block;
+  text-decoration: none;
+  text-align: center;
+  background: linear-gradient(to right, #2bb7da, #31d35c);
+  color: white;
+  width: 100%;
+  margin-top: 1rem;
+  padding: 0.7rem 0.8rem;
+  border-radius: 5px;
+  margin-bottom: 2rem;
+}
+footer {
+  background-color: black;
+  padding-top: 1rem;
+  margin-bottom: -2rem;
+}
+
+.footer-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-left: 1.5rem;
+}
+
+.footer-form {
+  display: flex;
+  width: 35%;
+  justify-content: space-between;
+}
+.form-search-wrapper {
+  width: 68%;
+}
+.search-button {
+  width: 30%;
+}
+.footer-form a {
+  display: inline-block;
+  text-decoration: none;
+  background-color: white;
+  color: black;
+  border: 2px solid white;
+  border-radius: 5px;
+  padding: 1rem 1.2rem 0.5rem 1.2rem;
+  margin-left: 0.3rem;
+  /* width: 60%; */
+  text-align: center;
+}
+.footer-form a:hover {
+  color: #31d35c;
+}
+.footer-form .search-input {
+  padding: 1rem;
+  background: black;
+  color: white;
+  border: 2px solid white;
+  border-radius: 5px;
+  width: 100%;
+}
+
+::placeholder {
+  color: white;
+  font-size: 1rem;
+} /* Firefox */
+form .search-input:focus {
+  outline: none;
+}
+:-ms-input-placeholder {
+  color: white;
+} /* IE 10-11 */
+
+.footer-middle-section {
+  margin-top: 2rem;
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+  display: flex;
+  justify-content: space-between;
+  font-size: 1.2rem;
+}
+.footer-section {
+  width: 20%;
+  display: flex;
+  flex-direction: column;
+}
+
+.footer-section a {
+  text-decoration: none;
+  color: white;
+  margin-bottom: 0.2rem;
+}
+.footer-section a:hover {
+  color: #31d35c;
+}
+.footer-subscribe-btn {
+  border: 2px solid white;
+  color: white;
+  text-align: center;
+  background-color: black;
+  width: 100%;
+  padding: 0.8rem 0;
+  font-size: 1.1rem;
+  border-radius: 5px;
+  margin-top: 0.3rem;
+}
+.footer-subscribe-btn:hover {
+  color: black;
+  background-color: white;
+  border: 2px solid black;
+}
+footer hr {
+  margin: 1rem 0;
+  height: 1.2px;
+  background-color: white;
+  border: none;
+}
+.footer-bottom-section {
+  display: flex;
+  justify-content: space-between;
+  margin: 1.5rem 0 1.5rem 1.5rem;
+}
+.footer-bottom-link {
+  flex-wrap: nowrap;
+  width: 40%;
+}
+.footer-bottom-link a {
+  text-decoration: none;
+  color: white;
+}
+.footer-bottom-link a:hover {
+  color: #31d35c;
+}
+.footer-bottom-link a:not(:last-child) {
+  margin-right: 1.5rem;
+}
+.footer-bottom-section p {
+  color: white;
+  margin-left: 1.8rem;
+}
+.footer-social-links {
+  width: 30%;
+  margin-right: 2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-right: 2rem;
+}
+.footer-social-links a {
+  text-decoration: none;
+}
+.footer-social-links a:hover {
+  transform: scale(1.1);
+}
+.footer-social-links svg:hover {
+  fill: #31d35c;
+}
+.footer-social-links p {
+  margin-right: 0.5rem;
+}
+.footer-social-links a:not(:last-child) {
+  margin-right: 0.5rem;
+}
+.footer-social-links svg {
+  fill: white;
+}
+.footer-copyright {
+  width: 90%;
+  margin: 1rem auto 1rem auto;
+}
+.copyright {
+  text-align: center;
+  color: white;
+  padding-bottom: 1rem;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+/* Responsive Styling for the Contact form  */
+@media (min-width: 550px) and (max-width: 1000px) {
+  .contact-form {
+    width: 65%;
+  }
+}
+@media (min-width: 300px) and (max-width: 549px) {
+  .contact-form {
+    width: 85%;
+  }
+}
+
+/* //RESPONSIVE DESIGN FOR THE HEADER AND FOOTER// */
+@media (max-width: 750px) {
+  header {
+    position: relative;
+  }
+  .header-logo {
+    margin-left: -1.5rem;
+  }
+  .nav-toggle {
+    display: block;
+    position: absolute;
+    cursor: pointer;
+    margin-top: 0.4rem;
+    margin-right: 1rem;
+    right: 0;
+  }
+  nav svg {
+    width: 1.3rem;
+    fill: white;
+  }
+  .close,
+  .nav-checkbox {
+    display: none;
+  }
+
+  .nav-menu {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
+    margin: 0.1rem 0;
+  }
+  .nav-links {
+    position: absolute;
+    margin-top: 2.76rem;
+    top: 20px;
+    right: 0;
+    width: 100%;
+    z-index: 100;
+  }
+
+  li {
+    display: none;
+    padding: 0.2rem 1rem 0.2rem;
+    font-size: 1.2rem;
+  }
+  .nav-checkbox:checked ~ .nav-links .nav-menu li {
+    display: block;
+  }
+  .nav-checkbox:checked ~ label.nav-toggle .close {
+    display: block;
+  }
+  .nav-checkbox:checked ~ label.nav-toggle .menu {
+    display: none;
+  }
+  .nav-checkbox:checked ~ .nav-links .nav-menu {
+    background-color: black;
+    opacity: 0.9;
+    height: 60vh;
+    padding-top: 2rem;
+    border-radius: 3px;
+  }
+  .nav-call-to-action {
+    display: none;
+  }
+  footer {
+    font-size: 1rem;
+  }
+  .footer-form {
+    margin-top: 0.5rem;
+  }
+  .footer-form a {
+    margin-left: 0.3rem;
+    padding: 0.8rem 0.95rem 0.8rem 0.95rem;
+  }
+  .form-search-wrapper {
+    width: 80%;
+  }
+  .search-button {
+    width: 18%;
+  }
+  .foter-form .search-input {
+    padding: 0.8rem;
+  }
+  .footer-top {
+    flex-direction: column;
+  }
+
+  .footer-middle-section {
+    flex-wrap: wrap;
+    font-size: 1rem;
+  }
+  .footer-section {
+    margin-left: 1rem;
+    width: 32%;
+  }
+  .footer-section:nth-child(3) {
+    margin-top: 0.8rem;
+  }
+
+  .footer-section:last-child {
+    margin-top: 0.8rem;
+  }
+  .footer-section .subscribe-btn {
+    display: inline-block;
+    padding: 0.4rem 2rem 0.4rem 2rem;
+  }
+  .footer-bottom-section {
+    text-align: center;
+  }
+  .footer-bottom-section p {
+    margin-left: 0;
+  }
+  .footer-bottom-section {
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .footer-bottom-link {
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: 1.5rem;
+  }
+  .footer-social-links {
+    width: 55%;
+    margin: 0 auto;
+  }
+  .social-link {
+    display: flex;
+    justify-content: center;
+  }
+
+  .copyright {
+    font-weight: 700;
+    line-height: 1.4;
+    font-size: 0.8rem;
+  }
+}
+@media (max-width: 350px) {
+  /*For very small devices*/
+  .footer-middle-section {
+    justify-content: center;
+  }
+  .footer-section {
+    width: 90%;
+    margin: 0 auto;
+  }
+  .footer-bottom-section {
+    flex-direction: column;
+    justify-content: center;
+  }
+  .footer-bottom-link {
+    flex-direction: row;
+    width: 70%;
+  }
+  .footer-social-links {
+    width: 90%;
+    margin-top: 1rem;
+  }
 }
