--- a/css/index.css
+++ b/css/index.css
@@ -91,6 +91,7 @@ nav {
 footer {
   background-color: black;
   padding-top: 1rem;
+  margin-bottom: -2rem;
 }
 
 .footer-top {
@@ -243,7 +244,6 @@ footer hr {
   width: 90%;
   margin: 1rem auto 1rem auto;
 }
-.mentor-name,
 .copyright {
   text-align: center;
   color: white;
@@ -287,6 +287,7 @@ footer hr {
     position: absolute;
     margin-top: 2.76rem;
     top: 20px;
+    right: 0;
     width: 100%;
     z-index: 100;
   }
@@ -308,7 +309,7 @@ footer hr {
   .nav-checkbox:checked ~ .nav-links .nav-menu {
     background-color: black;
     opacity: 0.9;
-    height: 87vh;
+    height: 65vh;
     padding-top: 2rem;
     border-radius: 3px;
   }
@@ -383,13 +384,9 @@ footer hr {
     display: flex;
     justify-content: center;
   }
-  .mentor-name {
-    text-align: center;
-  }
-  .mentor-name,
   .copyright {
     font-weight: 700;
-    line-height: 1.4;
+    /* line-height: 1.4; */
     font-size: 0.8rem;
   }
 }
