--- a/css/newMetro.css
+++ b/css/newMetro.css
@@ -95,9 +95,7 @@ main {
   margin-top: 50px;
 }
 
-
-.whole-section{
-
+.whole-section {
   width: 80%;
 }
 .span3-name {
@@ -243,7 +241,6 @@ a {
   height: 45px;
 }
 
-
 .advert {
   width: 20%;
   display: flex;
@@ -285,6 +282,7 @@ a {
 footer {
   background-color: black;
   padding-top: 1rem;
+  margin-bottom: -2rem;
 }
 
 .footer-top {
@@ -437,7 +435,7 @@ footer hr {
   width: 90%;
   margin: 1rem auto 1rem auto;
 }
-.mentor-name,
+
 .copyright {
   text-align: center;
   color: white;
@@ -481,6 +479,7 @@ footer hr {
     position: absolute;
     margin-top: 2.76rem;
     top: 20px;
+    right: 0;
     width: 100%;
     z-index: 100;
   }
@@ -502,7 +501,7 @@ footer hr {
   .nav-checkbox:checked ~ .nav-links .nav-menu {
     background-color: black;
     opacity: 0.9;
-    height: 87vh;
+    height: 65vh;
     padding-top: 2rem;
     border-radius: 3px;
   }
@@ -577,10 +576,6 @@ footer hr {
     display: flex;
     justify-content: center;
   }
-  .mentor-name {
-    text-align: center;
-  }
-  .mentor-name,
   .copyright {
     font-weight: 700;
     line-height: 1.4;
@@ -611,146 +606,145 @@ footer hr {
 }
 
 @media (max-width: 750px) {
-    header {
-      position: relative;
-    }
-    .nav-toggle {
-      display: block;
-      position: absolute;
-      cursor: pointer;
-      margin-top: 0.4rem;
-      margin-right: 1rem;
-      right: 0;
-    }
-    nav svg {
-      width: 1.3rem;
-      fill: white;
-    }
-    .close,
-    .nav-checkbox {
-      display: none;
-    }
-  
-    .nav-menu {
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-      align-items: center;
-      margin: 0.1rem 0;
-    }
-    .nav-links {
-      position: absolute;
-      margin-top: 3.3rem;
-      /* left: 50%; */
-      top: 20px;
-      width: 100%;
-    }
-  
-    li {
-      display: none;
-      padding: 0.2rem 1rem 0.2rem;
-      font-size: 1.2rem;
-    }
-    .nav-checkbox:checked ~ .nav-links .nav-menu li {
-      display: block;
-    }
-    .nav-checkbox:checked ~ label.nav-toggle .close {
-      display: block;
-    }
-    .nav-checkbox:checked ~ label.nav-toggle .menu {
-      display: none;
-    }
-    .nav-checkbox:checked ~ .nav-links .nav-menu {
-      background-color: black;
-      opacity: 0.9;
-      height: 94vh;
-      padding-top: 2rem;
-      border-radius: 3px;
-    }
-    .nav-call-to-action {
-      display: none;
-    }
-    footer {
-      font-size: 1rem;
-    }
-    .footer-call-to-action a {
-      padding: 0.6rem 0.5rem 0.2rem 0.5rem;
-    }
-    form .search-input {
-      padding: 0.8rem;
-    }
-    .footer-top {
-      flex-direction: column;
-    }
-    .footer-middle-section {
-      flex-wrap: wrap;
-      font-size: 1rem;
-    }
-    .footer-section {
-      margin-left: 1rem;
-      width: 32%;
-    }
-    .footer-section:nth-child(3) {
-      margin-top: 0.5rem;
-    }
-    .footer-section:first-child {
-      margin-left: 1rem;
-    }
-    .footer-section:nth-child(2) {
-      margin-right: 1rem;
-    }
-    .footer-section:last-child {
-      margin-top: 0.5rem;
-      margin-right: 1rem;
-      margin-left: 2rem;
-    }
-    .footer-section .subscribe-btn {
-      padding: 0.4rem 3rem 0.4rem 3rem;
-    }
-    .footer-bottom-section {
-      flex-direction: column;
-      text-align: center;
-    }
-    .footer-bottom-section p {
-      margin-left: 0;
-    }
-    .footer-bottom-section p,
-    .footer-bottom-link {
-      width: 90%;
-    }
-    .mentor-name {
-      text-align: center;
-    }
-}
+  header {
+    position: relative;
+  }
+  .nav-toggle {
+    display: block;
+    position: absolute;
+    cursor: pointer;
+    margin-top: 0.4rem;
+    margin-right: 1rem;
+    right: 0;
+  }
+  nav svg {
+    width: 1.3rem;
+    fill: white;
+  }
+  .close,
+  .nav-checkbox {
+    display: none;
+  }
 
-@media (max-width: 750px){
-  .advert{
+  .nav-menu {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
+    margin: 0.1rem 0;
+  }
+  .nav-links {
+    position: absolute;
+    margin-top: 3.3rem;
+    /* left: 50%; */
+    top: 20px;
     width: 100%;
   }
-  .whole-section{
+
+  li {
+    display: none;
+    padding: 0.2rem 1rem 0.2rem;
+    font-size: 1.2rem;
+  }
+  .nav-checkbox:checked ~ .nav-links .nav-menu li {
+    display: block;
+  }
+  .nav-checkbox:checked ~ label.nav-toggle .close {
+    display: block;
+  }
+  .nav-checkbox:checked ~ label.nav-toggle .menu {
+    display: none;
+  }
+  .nav-checkbox:checked ~ .nav-links .nav-menu {
+    background-color: black;
+    opacity: 0.9;
+    height: 94vh;
+    padding-top: 2rem;
+    border-radius: 3px;
+  }
+  .nav-call-to-action {
+    display: none;
+  }
+  footer {
+    font-size: 1rem;
+  }
+  .footer-call-to-action a {
+    padding: 0.6rem 0.5rem 0.2rem 0.5rem;
+  }
+  form .search-input {
+    padding: 0.8rem;
+  }
+  .footer-top {
+    flex-direction: column;
+  }
+  .footer-middle-section {
+    flex-wrap: wrap;
+    font-size: 1rem;
+  }
+  .footer-section {
+    margin-left: 1rem;
+    width: 32%;
+  }
+  .footer-section:nth-child(3) {
+    margin-top: 0.5rem;
+  }
+  .footer-section:first-child {
+    margin-left: 1rem;
+  }
+  .footer-section:nth-child(2) {
+    margin-right: 1rem;
+  }
+  .footer-section:last-child {
+    margin-top: 0.5rem;
+    margin-right: 1rem;
+    margin-left: 2rem;
+  }
+  .footer-section .subscribe-btn {
+    padding: 0.4rem 3rem 0.4rem 3rem;
+  }
+  .footer-bottom-section {
+    flex-direction: column;
+    text-align: center;
+  }
+  .footer-bottom-section p {
+    margin-left: 0;
+  }
+  .footer-bottom-section p,
+  .footer-bottom-link {
+    width: 90%;
+  }
+  .mentor-name {
+    text-align: center;
+  }
+}
+
+@media (max-width: 750px) {
+  .advert {
+    width: 100%;
+  }
+  .whole-section {
     display: block;
   }
 
-  img{
+  img {
     display: block;
     max-width: 100%;
     height: 100px;
     padding: auto;
   }
 
-  .first-section img{
+  .first-section img {
     width: 100px;
     height: 130px;
   }
-  
-  .section-wrapper img{
+
+  .section-wrapper img {
     width: 120px;
     height: 150px;
   }
-  
-  .third-section-wrapper img{
+
+  .third-section-wrapper img {
     width: 120px;
-    height: 150px
+    height: 150px;
   }
 }
-
