--- a/css/tidelabNews.css
+++ b/css/tidelabNews.css
@@ -9,11 +9,9 @@
 /* //HEADER SECTION// */
 header {
   background: linear-gradient(to right, #2bb7da, #31d35c);
-    margin-top: 45px;
-    height: 60px;
-    text-align: center;
-    justify-content: center;
-    
+  height: 60px;
+  text-align: center;
+  justify-content: center;
 }
 nav {
   display: flex;
@@ -107,27 +105,27 @@ nav {
 }
 
 .container-wrapper {
-  display: flex;                                                                                                                
-
+  display: flex;
+}
 .section-heading-separator {
-  display:flex;
-  justify-content:center;
-  position:relative;
+  display: flex;
+  justify-content: center;
+  position: relative;
   margin-bottom: 0.2em;
 }
 
-.section-heading-separator .sub-title{
-  font-size:2.2em;
-  font-family:'Times New Roman', Times, serif;
+.section-heading-separator .sub-title {
+  font-size: 2.2em;
+  font-family: "Times New Roman", Times, serif;
   line-height: 1.2;
   color: black;
   background-color: white;
   position: relative;
   z-index: 1;
- }
+}
 
 .section-heading-separator fieldset {
-  width:100%;
+  width: 100%;
   text-align: center;
   border-left: none;
   border-right: none;
@@ -137,24 +135,24 @@ nav {
   color: red;
 }
 
-main{
+main {
   display: flex;
   justify-content: space-between;
   margin-top: 5px;
 }
-.sub-title{
-    margin: 20px 20px;
-    text-align: center;
-    font-size: bold;
+.sub-title {
+  margin: 20px 20px;
+  text-align: center;
+  font-size: bold;
 }
 
- .whole-container-wrapper {
-   width: 80%;
+.whole-container-wrapper {
+  width: 80%;
   /* align-items: center; */
   margin-top: 5px;
 }
 
-.advertisment{
+.advertisment {
   width: 20%;
 }
 
@@ -164,25 +162,24 @@ main{
   margin-bottom: 80px;
 } */
 
-.adname{
- font-size: 10px;
- text-align: center;
-} */
-
-.left-section{
+.adname {
+  font-size: 10px;
+  text-align: center;
+}
+*/ .left-section {
   width: 30%;
 }
 
-.first{
+.first {
   border-bottom: 2px solid rgb(226, 217, 217);
 }
 
-  .left img{
-    width: 100%;
-    height: 180px;
+.left img {
+  width: 100%;
+  height: 180px;
 }
 
-.middle-section{
+.middle-section {
   width: 52%;
   border-left: 1px solid rgb(226, 217, 217);
   border-right: 1px solid rgb(226, 217, 217);
@@ -191,7 +188,7 @@ main{
   padding-right: 10px;
 }
 
-.middle img{
+.middle img {
   width: max-content;
   height: 250px;
   /* align-items: stretch; */
@@ -203,39 +200,38 @@ main{
   margin-top: 25px;
 }
 
-.middle a{
+.middle a {
   text-decoration: none;
   color: #000;
 }
 
-.middle-title{
+.middle-title {
   font-size: 24px;
   text-align: center;
 }
 
-.right-section{
+.right-section {
   width: 30%;
 }
 
-.right img{
+.right img {
   width: 100%;
   height: 180px;
 }
 
-.news-headlines{
+.news-headlines {
   display: flex;
   justify-content: space-around;
   gap: 10px;
   border-bottom: 1px solid rgb(226, 217, 217);
 }
-.container-wrapper{
-    display: flex;
-    justify-content: center;
-    /* align-items: center; */
-    gap: 20px;
-    margin-top: 2rem;
+.container-wrapper {
+  display: flex;
+  justify-content: center;
+  /* align-items: center; */
+  gap: 20px;
+  margin-top: 2rem;
 }
-
 
 /* .news-clip{
     padding: 10px;
@@ -255,39 +251,36 @@ main{
   text-align: center;
 }
 
- a {
-   text-decoration: none;
-   color: black;
- }
-
-
-.section-heading-separator fieldset h2{
-    font-size: 30px;
-    font-weight: bold;
-    margin-bottom: 10px;
-    text-transform: uppercase;
-    text-align: center;
-    
+a {
+  text-decoration: none;
+  color: black;
 }
-.div-wrapper{
+
+.section-heading-separator fieldset h2 {
+  font-size: 30px;
+  font-weight: bold;
+  margin-bottom: 10px;
+  text-transform: uppercase;
+  text-align: center;
+}
+.div-wrapper {
   display: flex;
   justify-content: space-between;
   align-items: center;
-   gap: 20px;
+  gap: 20px;
   margin-top: 20px;
 }
 
 .div-wrapper img {
   width: 235px;
-    height: 180px;
-
+  height: 180px;
 }
-
 
 /* //FOOTER SECTION// */
 footer {
   background-color: black;
   padding-top: 1rem;
+  margin-bottom: -2rem;
 }
 
 .footer-top {
@@ -436,11 +429,6 @@ footer hr {
 .footer-social-links svg {
   fill: white;
 }
-.footer-copyright {
-  width: 90%;
-  margin: 1rem auto 1rem auto;
-}
-.mentor-name,
 .copyright {
   text-align: center;
   color: white;
@@ -484,6 +472,7 @@ footer hr {
     position: absolute;
     margin-top: 2.76rem;
     top: 20px;
+    right: 0;
     width: 100%;
     z-index: 100;
   }
@@ -505,7 +494,7 @@ footer hr {
   .nav-checkbox:checked ~ .nav-links .nav-menu {
     background-color: black;
     opacity: 0.9;
-    height: 87vh;
+    height: 65vh;
     padding-top: 2rem;
     border-radius: 3px;
   }
@@ -580,10 +569,7 @@ footer hr {
     display: flex;
     justify-content: center;
   }
-  .mentor-name {
-    text-align: center;
-  }
-  .mentor-name,
+
   .copyright {
     font-weight: 700;
     line-height: 1.4;
