--- a/css/index.css
+++ b/css/index.css
@@ -5,16 +5,20 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
-
 /* //HEADER SECTION// */
 header {
   background: linear-gradient(to right, #2bb7da, #31d35c);
+  z-index:1;
+  position:sticky;
+	top:0px;
+	left:0px;
 }
 nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 1.2rem;
+ 
 }
 
 .header-logo h3,
@@ -84,6 +88,7 @@ nav {
 .nav-call-to-action a:last-child {
   padding: 0.6rem 0.6rem 0.5rem 0.6rem;
 }
+
 /* //MAIN SECTION/ */
 
 
@@ -120,14 +125,14 @@ img {
 a {
   color:black;
 }
-
+/*
 
 object {
     width:100%;
     height:300px;
     margin-top: 2%;
 }
-
+*/
 .carousel-inner .carousel-item img {
 object-fit: cover;
 position: 50%;
@@ -145,9 +150,7 @@ position: 50%;
   font-family:'Times New Roman', Times, serif;
   line-height: 1.2;
   color: black;
-  background-color: white;
-  position: relative;
-  z-index: 1;
+  background-color:transparent;
   padding: 0.25em 1em;
 }
 
@@ -161,7 +164,7 @@ position: 50%;
   border-left: none;
   border-right: none;
   border-bottom: none;
-  margin-top: 2%;
+  margin-top:0%;
 }
 
 
@@ -173,7 +176,7 @@ position: 50%;
     width:20%;
     height:60%;
     left:80%;
-    top:10%;
+    top:20%;
     position:absolute;
 }
 
@@ -182,7 +185,7 @@ position: 50%;
     width:20%;
     height:90%;
     left:80%;
-    top:100%;
+    top:110%;
     position:absolute;
 }
 
@@ -872,9 +875,8 @@ a {
   font-family: "Times New Roman", Times, serif;
   line-height: 1.2;
   color: black;
-  background-color: white;
+  background-color:transparent;
   position: relative;
-  z-index: 1;
   padding: 0.25em 1em;
 }
 
@@ -1327,166 +1329,168 @@ footer hr {
 }
 
 
-
-
-/* //RESPONSIVE DESIGN// */
-@media (max-width: 750px) {
-  header {
-    position: relative;
+ 
+  /* //RESPONSIVE DESIGN// */
+  @media (max-width: 750px) {
+    header {
+      z-index:1;
+  position:sticky;
+	top:0px;
+	left:0px;
+    }
+    .header-logo {
+      margin-left: -1.5rem;
+    }
+    .nav-toggle {
+      display: block;
+      position: absolute;
+      cursor: pointer;
+      margin-top: 0.4rem;
+      margin-right: 1rem;
+      right: 0;
+    }
+    nav svg {
+      width: 1.3rem;
+      fill: white;
+    }
+    .close,
+    .nav-checkbox {
+      display: none;
+    }
+  
+    .nav-menu {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      align-items: center;
+      margin: 0.1rem 0;
+    }
+    .nav-links {
+      position: absolute;
+      margin-top: 2.76rem;
+      top: 20px;
+      right: 0;
+      width: 100%;
+      z-index: 100;
+    }
+  
+    li {
+      display: none;
+      padding: 0.2rem 1rem 0.2rem;
+      font-size: 1.2rem;
+    }
+    .nav-checkbox:checked ~ .nav-links .nav-menu li {
+      display: block;
+    }
+    .nav-checkbox:checked ~ label.nav-toggle .close {
+      display: block;
+    }
+    .nav-checkbox:checked ~ label.nav-toggle .menu {
+      display: none;
+    }
+    .nav-checkbox:checked ~ .nav-links .nav-menu {
+      background: linear-gradient(to right, #2bb7da, #31d35c);
+      opacity: 1.5;
+      height: 55vh;
+      padding-top: 2rem;
+      border-radius: 3px;
+    }
+    .nav-call-to-action {
+      display: none;
+    }
+    footer {
+      font-size: 1rem;
+    }
+    .footer-form {
+      margin-top: 0.5rem;
+    }
+    .footer-form a {
+      margin-left: 0.3rem;
+      padding: 0.8rem 0.95rem 0.8rem 0.95rem;
+    }
+    .form-search-wrapper {
+      width: 80%;
+    }
+    .search-button {
+      width: 18%;
+    }
+    .foter-form .search-input {
+      padding: 0.8rem;
+    }
+    .footer-top {
+      flex-direction: column;
+    }
+  
+    .footer-middle-section {
+      flex-wrap: wrap;
+      font-size: 1rem;
+    }
+    .footer-section {
+      margin-left: 1rem;
+      width: 32%;
+    }
+    .footer-section:nth-child(3) {
+      margin-top: 0.8rem;
+    }
+  
+    .footer-section:last-child {
+      margin-top: 0.8rem;
+    }
+    .footer-section .subscribe-btn {
+      display: inline-block;
+      padding: 0.4rem 2rem 0.4rem 2rem;
+    }
+    .footer-bottom-section {
+      text-align: center;
+    }
+    .footer-bottom-section p {
+      margin-left: 0;
+    }
+    .footer-bottom-section {
+      width: 90%;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    .footer-bottom-link {
+      width: 30%;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      margin-left: 1.5rem;
+    }
+    .footer-social-links {
+      width: 55%;
+      margin: 0 auto;
+    }
+    .social-link {
+      display: flex;
+      justify-content: center;
+    }
+    .copyright {
+      font-weight: 700;
+      /* line-height: 1.4; */
+      font-size: 0.8rem;
+    }
   }
-  .header-logo {
-    margin-left: -1.5rem;
+  @media (max-width: 350px) {
+    /*For very small devices*/
+    .footer-middle-section {
+      justify-content: center;
+    }
+    .footer-section {
+      width: 90%;
+      margin: 0 auto;
+    }
+    .footer-bottom-section {
+      flex-direction: column;
+      justify-content: center;
+    }
+    .footer-bottom-link {
+      flex-direction: row;
+      width: 70%;
+    }
+    .footer-social-links {
+      width: 90%;
+      margin-top: 1rem;
+    }
   }
-  .nav-toggle {
-    display: block;
-    position: absolute;
-    cursor: pointer;
-    margin-top: 0.4rem;
-    margin-right: 1rem;
-    right: 0;
-  }
-  nav svg {
-    width: 1.3rem;
-    fill: white;
-  }
-  .close,
-  .nav-checkbox {
-    display: none;
-  }
-
-  .nav-menu {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    align-items: center;
-    margin: 0.1rem 0;
-  }
-  .nav-links {
-    position: absolute;
-    margin-top: 2.76rem;
-    top: 20px;
-    right: 0;
-    width: 100%;
-    z-index: 100;
-  }
-
-  li {
-    display: none;
-    padding: 0.2rem 1rem 0.2rem;
-    font-size: 1.2rem;
-  }
-  .nav-checkbox:checked ~ .nav-links .nav-menu li {
-    display: block;
-  }
-  .nav-checkbox:checked ~ label.nav-toggle .close {
-    display: block;
-  }
-  .nav-checkbox:checked ~ label.nav-toggle .menu {
-    display: none;
-  }
-  .nav-checkbox:checked ~ .nav-links .nav-menu {
-    background-color: black;
-    opacity: 0.9;
-    height: 65vh;
-    padding-top: 2rem;
-    border-radius: 3px;
-  }
-  .nav-call-to-action {
-    display: none;
-  }
-  footer {
-    font-size: 1rem;
-  }
-  .footer-form {
-    margin-top: 0.5rem;
-  }
-  .footer-form a {
-    margin-left: 0.3rem;
-    padding: 0.8rem 0.95rem 0.8rem 0.95rem;
-  }
-  .form-search-wrapper {
-    width: 80%;
-  }
-  .search-button {
-    width: 18%;
-  }
-  .foter-form .search-input {
-    padding: 0.8rem;
-  }
-  .footer-top {
-    flex-direction: column;
-  }
-
-  .footer-middle-section {
-    flex-wrap: wrap;
-    font-size: 1rem;
-  }
-  .footer-section {
-    margin-left: 1rem;
-    width: 32%;
-  }
-  .footer-section:nth-child(3) {
-    margin-top: 0.8rem;
-  }
-
-  .footer-section:last-child {
-    margin-top: 0.8rem;
-  }
-  .footer-section .subscribe-btn {
-    display: inline-block;
-    padding: 0.4rem 2rem 0.4rem 2rem;
-  }
-  .footer-bottom-section {
-    text-align: center;
-  }
-  .footer-bottom-section p {
-    margin-left: 0;
-  }
-  .footer-bottom-section {
-    width: 90%;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  .footer-bottom-link {
-    width: 30%;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin-left: 1.5rem;
-  }
-  .footer-social-links {
-    width: 55%;
-    margin: 0 auto;
-  }
-  .social-link {
-    display: flex;
-    justify-content: center;
-  }
-  .copyright {
-    font-weight: 700;
-    /* line-height: 1.4; */
-    font-size: 0.8rem;
-  }
-}
-@media (max-width: 350px) {
-  /*For very small devices*/
-  .footer-middle-section {
-    justify-content: center;
-  }
-  .footer-section {
-    width: 90%;
-    margin: 0 auto;
-  }
-  .footer-bottom-section {
-    flex-direction: column;
-    justify-content: center;
-  }
-  .footer-bottom-link {
-    flex-direction: row;
-    width: 70%;
-  }
-  .footer-social-links {
-    width: 90%;
-    margin-top: 1rem;
-  }
-}
